--- a/app/build.gradle
+++ b/app/build.gradle
@@ -80,7 +80,7 @@ android {
     buildTypes {
         release {
             signingConfig = signingConfigs.getByName("releases")
-            minifyEnabled true
+            minifyEnabled false
             //signingConfig signingConfigs.release
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
 
